syntax = "proto3";

option java_package = "com.cloudbees.grpc.core.generated";
option java_multiple_files=true;

message Booking {
  string id = 1;
  string from = 2;
  string to = 3;
  int32 price = 4;
  int32 seat = 5;
  string section = 6;
  User user = 7;
}

message User {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message BookingRequest {
  string from = 1;
  string to = 2;
  int32 price = 3;
  User user = 4;
}

message BookingResponse {
  string id = 1;
  string from = 2;
  string to = 3;
  int32 price = 4;
  int32 seat = 5;
  string section = 6;
  User user = 7;
}

message BookingListResponse {
  repeated BookingResponse bookings = 1;
}

message GetBookingByUserRequest {
  User user = 1;
}

message GetBookingsBySectionRequest {
  string section = 1;
}

message RemoveBookingByUserRequest {
  User user = 1;
}

message RemoveBookingResponse {}

message SeatModificationRequest {
  string section = 1;
  int32 seat = 2;
  User user = 3;
}

message SeatModificationResponse {
  string section = 1;
  int32 seat = 2;
  User user = 3;
}

service BookingService {
  rpc CreateBooking(BookingRequest) returns (BookingResponse);
  rpc GetBookingByUser(GetBookingByUserRequest) returns (BookingResponse);
  rpc GetBookingsBySection(GetBookingsBySectionRequest) returns (BookingListResponse);
  rpc RemoveBookingByUser(RemoveBookingByUserRequest) returns (RemoveBookingResponse);
  rpc ModifySeatByUser(SeatModificationRequest) returns (SeatModificationResponse);
}
